--- a/package.json
+++ b/package.json
@@ -3,16 +3,28 @@
   "author": "Per Eriksson",
   "version": "0.1.0",
   "main": "build/main.js",
+  "license": "MIT",
   "scripts": {
     "build": "gulp",
-    "run": "electron dist/main.js"
+    "start": "electron build/main.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sporelax/CarpTrader.git"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-postcss": "^6.4.0",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.2"
+  },
+  "dependencies": {
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   }
 }
