--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "autoprefixer": "^6.7.7",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "browserify": "^14.3.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-livereload": "^3.8.1",
     "gulp-postcss": "^6.4.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.2"
